# node-boxcars

./: .gitattributes  .prettierignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs  index.spec.ts
__test__/demos/: 61F74DFC4C42C4FB11F1FABECB0C561B.replay  930965114253E9682DDFDE8747C9C8E2.replay
benchmark/: bench.ts
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
