[package]
edition = "2021"
name = "node-boxcars"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
boxcars = "0.9.11"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi9", "error_anyhow"] }
napi-derive = "2.12.2"
serde_json = "1.0.115"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
