[package]
authors = ["Justkant"]
edition = "2021"
name    = "node-boxcars"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow      = "1"
boxcars     = "0.10"
napi        = "3"
napi-derive = "3"
serde_json  = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
